# util

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: changelog.yml
dotfiles/: .fzf.zsh  .tmux.conf  .zshrc
dotfiles/.config/nvim/: lazy-lock.json
dotfiles/.config/nvim/lua/plugins/: leap.lua  noice.lua  parrot.lua
dotfiles_backup/: .tmux.conf_20241023_184453  .zshrc_20241023_184328  .zshrc_20241023_214608
dotfiles_backup/.config/nvim_20241023_201731/: lazyvim.json
dotfiles_backup/.config_20241023_201002/go/telemetry/local/: go@go1.23.2-go1.23.2-linux-amd64-2024-10-05.v1.count
dotfiles_backup/.config_20241023_201002/nvim/: lazy-lock.json
dotfiles_backup/.config_20241023_201002/nvim.bak/: .netrwhist  lazy-lock.json
dotfiles_backup/.config_20241023_201002/nvim.bak/lua/theprimeagen/: set.lua
dotfiles_backup/.config_20241023_201002/nvim.bak/lua/theprimeagen/lazy/: init.lua  local.lua
dotfiles_backup/.config_20241023_201002/nvim/lua/config/: keymaps.lua
scripts/: ask_claude.py  cpp_scaffolding.py  load_env.sh  macro_recorder.py  macro_recorder_gui.py  manage_dotfiles.py  start_tmux.sh
scripts/macros/: carpentry_hickory.json  lumber-oak.json  mine_first.json
