[project]
authors = [{ name = "Wolfgang Bubberman", email = "wolfbubberman@gmail.com" }]
dependencies = []
description = "Add a short description here"
name = "util"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
util = { path = ".", editable = true }

[tool.pixi.dependencies]
anthropic = ">=0.37.1,<0.38"
pdf2image = ">=1.17.0,<2"
black = ">=24.10.0,<25"
inquirer = ">=3.1.4,<4"
setuptools = ">=75.1.0,<76"

[tool.hatch.build.targets.wheel]
packages = ["util"]
